@@ -1,4 +1,8 @@
 2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* python/histfitter/plotting/systematicsplotter.py: check file existence;
+	put sample name in canvas title
+
+2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* Tagging HistFitter-00-00-53
 
 2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
